objects/SetApexLoggerEvent__e.object
<CustomObject>
    <description>Platform Event to Captures Details about Apex Exception which will be saved to Apex Logger Object.</description>
    <fields>
        <fullName>ClassName__c</fullName>
        <description>Class Name on which Exception Occurred.</description>
        <label>Class Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorMessage__c</fullName>
        <description>Error Message from Apex  Exception.</description>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExceptionType__c</fullName>
        <description>Type of Apex Exception.</description>
        <label>Exception Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MethodName__c</fullName>
        <description>Method Name on which Exception Occured.</description>
        <label>Method Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordId__c</fullName>
        <description>SObject Record ID</description>
        <label>Record Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordJson__c</fullName>
        <description>Details about Object on which Exception Occurred.</description>
        <label>Record Json</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>StackTrace__c</fullName>
        <description>Stack Trace of Apex Exception.</description>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TransactionId__c</fullName>
        <description>Transaction ID of Apex Transaction.</description>
        <label>Transaction Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <description>Logged In User&apos;s Id.</description>
        <label>User Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>SetApexLoggerEvent</label>
    <pluralLabel>SetApexLoggerEvents</pluralLabel>
</CustomObject>